# alien-project

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
alienproject/: asgi.py  settings.py  urls.py  wsgi.py
alienproject/accounts/: forms.py  models.py  signals.py  views.py
alienproject/api/: views.py
alienproject/spa/: apps.py  views.py
alienproject/static/frontend/: bundle.css  bundle.js  bundle.js.map
alienproject/staticfiles/: staticfiles.json
alienproject/staticfiles/frontend/: bundle.8c54aa7a2aee.js  bundle.js.map
alienproject/templates/registration/: login.html
alienproject/templates/spa/: index.html
frontend/: rollup.config.js
frontend/src/: App.svelte
frontend/src/components/: Profile.svelte
frontend/src/routes/: Aliens.svelte
frontend/src/routes/games/: Spaceinvaders.svelte
src/: .App.svelte.un~  App.svelte  App.svelte~
src/lib/: .Profile.svelte.un~  Chat.svelte  Navbar.svelte  Profile.svelte  Profile.svelte~
src/routes/: Aliens.svelte  Games.svelte
src/routes/games/: Pong.svelte  Snake.svelte  Tetris.svelte
