[tool.poetry]
name = "alien-project"
version = "0.1.0"
description = ""
authors = ["SoMir0"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
whitenoise = "^6.2.0"
djangorestframework = "^3.13.1"
pytz = "^2022.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
